# cache-movies-manager-haskell

./: README.md  cache-movies-manager.cabal  package.yaml  stack.yaml  start.sh
app/: DevelMain.hs  Main.hs  devel.hs
config/: keter.yml  routes
src/: Application.hs  Endpoints.hs  Importer.hs  Lib.hs  Model.hs  MoviesImporter.hs  RedisConnector.hs  TagsListener.hs
src/Handler/: Movie.hs
src/Import/: NoFoundation.hs
