name:                cache-movies-manager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cache-movies-manager#readme
license:             BSD3
license-file:        LICENSE
author:              Xavier Barrelet
maintainer:          example@example.com
copyright:           2020 Xavier Barrelet
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Endpoints
                     , MoviesImporter
                     , Model
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , servant-client
                     , text
                     , http-client
  default-language:    Haskell2010

executable cache-movies-manager-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cache-movies-manager
  default-language:    Haskell2010

test-suite cache-movies-manager-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cache-movies-manager
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cache-movies-manager
